--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,6 +53,7 @@ jobs:
           haxelib git faxe https://github.com/uhrobots/faxe
           haxelib git polymod https://github.com/larsiusprime/polymod.git
           haxelib git extension-webm https://github.com/HaxeExtension/extension-webm
+          haxelib run lime rebuild extension-webm windows
           haxelib install hxcpp-debug-server
           haxelib list
         shell: cmd
